background clipping fix 2

--- a/src/index.css
+++ b/src/index.css
@@ -45,10 +45,9 @@ body {
 
 body {
   background-image: url(image/smiley.gif);
-  /*color: gray !important;*/
   background-color: #191719 !important;
   background-position: revert;
-
+  background-size: 320px;
   background-position-x: 0px;
   animation: scaleAnimation 10s infinite linear;
 }
